// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Watch A11y I can see the skip to content link 1`] = `"કન્ટેન્ટ પર જાવ"`;

exports[`Canonical Watch Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Watch Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Watch Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "50",
  },
  {
    "p": "gujarati.articles.cj4jdypqw9zo.page",
  },
  {
    "x1": "[urn:bbc:optimo:asset:cj4jdypqw9zo]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-gujarati]",
  },
  {
    "x4": "[gu]",
  },
  {
    "x7": "[article-sfv]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[નેપાળ%20:%20એવું%20ભયંકર%20પૂર%20આવ્યું%20કે%20વાહનો,%20પુલ,%20બિલ્ડિંગો%20તણાઈ%20ગયાં]",
  },
  {
    "x11": "[2026-08-26T13:22:55.569Z]",
  },
  {
    "x12": "[2026-08-26T13:22:55.569Z]",
  },
  {
    "x13": "[Narendra+Modi~Nepal~Xi+Jinping~India~China~Flood~Severe+weather]",
  },
  {
    "x14": "[103fc7e4-3a8d-491c-9a75-3c37c299d48f~1de7eccb-d633-4e93-97c2-1771b7841345~47172845-9973-40ac-8d1e-b18a302cabf0~5a08f030-710f-4168-acee-67294a90fc75~6892384e-1966-4c03-9ce3-f694a8f9f69e~7789f256-a806-479a-b6d0-50e3d4cd9abc~9b16a6c2-7c16-42b7-bff7-6549579622e8]",
  },
  {
    "x17": "[Narendra+Modi~Nepal~Xi+Jinping~India~China~Flood~Severe+weather]",
  },
]
`;

exports[`Canonical Watch Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, ગુજરાતી",
  "url": "/gujarati",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 2`] = `
{
  "text": "બીબીસી વિશ્વાસપાત્ર કેમ?",
  "url": "https://www.bbc.com/gujarati/institutional-50409883",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 3`] = `
{
  "text": "ઉપયોગની શરતો",
  "url": "https://www.bbc.com/terms",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 4`] = `
{
  "text": "બીબીસી વિશે",
  "url": "https://www.bbc.com/aboutthebbc",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 5`] = `
{
  "text": "પ્રાઇવસી પૉલિસી",
  "url": "https://www.bbc.com/gujarati/articles/crk1k5j5xzzo",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 6`] = `
{
  "text": "કુકીઝ",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 7`] = `
{
  "text": "BBC નો સંપર્ક કરો",
  "url": "https://www.bbc.co.uk/gujarati/send/u50853313",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 8`] = `
{
  "text": "BBC News અન્ય ભાષાઓમાં",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 9`] = `
{
  "text": "બહારની વેબસાઇટ્સની લિંક આપવા અંગેની અમારી નીતિ વિશે વાંચો",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Watch Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/gujarati"`;

exports[`Canonical Watch Footer Paragraphs should match text 1`] = `"બીબીસી માટે કલેક્ટિવ ન્યૂઝરૂમનું પ્રકાશન"`;

exports[`Canonical Watch Footer Paragraphs should match text 2`] = `"© 2026 BBC. બહારની વેબસાઇટ્સની સામગ્રી માટે બીબીસી જવાબદાર નથી. બહારની વેબસાઇટ્સની લિંક આપવા અંગેની અમારી નીતિ વિશે વાંચો"`;

exports[`Canonical Watch Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, ગુજરાતી",
  "svg": <path
    d="M759.931 265.751a4646.556 4646.556 0 00-23.49-37.242 2633.259 2633.259 0 00-23.49-36.2v73.442h-22.003V159.452h23.193a2668.532 2668.532 0 0123.713 36.053 2774.198 2774.198 0 0123.266 36.647v-72.7h22.004v106.3H759.93zM804.19 159.452h73.146v19.03h-50.25v23.044h44.6v19.03h-44.6v26.165h53.075v19.03h-75.97V159.452zM982.106 265.751a3174.487 3174.487 0 01-9.887-35.978 3159.69 3159.69 0 01-9.44-35.978 2391.605 2391.605 0 01-9.218 35.978 2452.24 2452.24 0 01-9.812 35.978h-24.233a2032.897 2032.897 0 01-14.57-52.629c-4.66-17.74-9.069-35.63-13.231-53.67h24.976a2003.257 2003.257 0 007.88 41.33 1444.417 1444.417 0 008.771 40.587 3259.892 3259.892 0 0018.881-77.457h22.3a3251.996 3251.996 0 0018.733 75.822 1999.99 1999.99 0 008.623-39.844 1455.387 1455.387 0 007.73-40.438h24.532a1845.264 1845.264 0 01-13.232 53.67 2041.547 2041.547 0 01-14.57 52.63h-24.233zM1077.477 267.981c-5.85 0-11.622-.645-17.32-1.932a66.227 66.227 0 01-16.428-6.096v-20.517c10.604 6.444 21.854 9.664 33.748 9.664 6.739 0 11.868-1.138 15.387-3.419 3.517-2.28 5.278-5.45 5.278-9.515 0-3.07-.869-5.476-2.602-7.21-1.735-1.733-4.04-3.122-6.913-4.163-2.876-1.04-6.095-2.008-9.663-2.9-5.85-1.386-11.002-2.973-15.462-4.757-4.46-1.784-8.228-3.888-11.3-6.318-3.072-2.428-5.402-5.353-6.987-8.772-1.586-3.42-2.378-7.507-2.378-12.265 0-6.74 1.71-12.537 5.129-17.395 3.42-4.854 8.25-8.597 14.495-11.224 6.244-2.625 13.678-3.94 22.3-3.94 5.65 0 11.2.646 16.652 1.933 5.45 1.29 10.356 3.024 14.718 5.204v20.218c-4.362-2.676-9.292-4.757-14.792-6.244-5.501-1.487-11.028-2.23-16.577-2.23-6.047 0-10.73 1.04-14.05 3.122-3.321 2.081-4.98 5.055-4.98 8.92 0 2.776.792 4.981 2.379 6.616 1.584 1.635 3.84 2.974 6.764 4.014 2.922 1.041 6.367 2.058 10.333 3.048 5.055 1.29 9.76 2.702 14.123 4.237 4.36 1.538 8.2 3.494 11.522 5.873 3.32 2.378 5.896 5.403 7.731 9.068 1.833 3.668 2.75 8.178 2.75 13.53 0 7.038-1.735 13.06-5.203 18.063-3.47 5.006-8.474 8.823-15.016 11.447-6.541 2.626-14.42 3.94-23.638 3.94z"
  />,
}
`;

exports[`Canonical Watch Header Navigation link should match text and url 1`] = `
{
  "text": "સમાચાર",
  "url": "/gujarati",
}
`;

exports[`Canonical Watch Image Caption should match text 1`] = `"વીડિયો કૅપ્શન, એવું ભયંકર પૂર આવ્યું કે વાહનો, પુલ, બિલ્ડિંગો તણાઈ ગઈ"`;

exports[`Canonical Watch Image should match snapshot 1`] = `
<noscript>
  <div>
    <div
      class="css-1hkxzg1"
    >
      <strong
        class="css-pow7hy"
      >
        તમારું ડિવાઇસ મીડિયા પ્લેબૅક સપોર્ટ નથી કરતું
      </strong>
    </div>
  </div>
</noscript>
`;

exports[`Canonical Watch Main heading should match text 1`] = `"નેપાળ : એવું ભયંકર પૂર આવ્યું કે વાહનો, પુલ, બિલ્ડિંગો તણાઈ ગયાં"`;

exports[`Canonical Watch Media Loader renders a valid container 1`] = `
<figure
  class="media-container css-1okmog4"
  data-e2e="media-loader__container"
>
  <div
    class="media-player css-9p9hvp"
    data-e2e="media-player"
  >
    <noscript>
      <div>
        <div
          class="css-1hkxzg1"
        >
          <strong
            class="css-pow7hy"
          >
            તમારું ડિવાઇસ મીડિયા પ્લેબૅક સપોર્ટ નથી કરતું
          </strong>
        </div>
      </div>
    </noscript>
  </div>
  <figcaption
    class="css-1icbxpp"
    dir="ltr"
  >
    <span
      role="text"
    >
      <span
        class="css-5ku87v"
      >
        વીડિયો કૅપ્શન, 
      </span>
      <span
        data-testid="caption-paragraph"
      >
        એવું ભયંકર પૂર આવ્યું કે વાહનો, પુલ, બિલ્ડિંગો તણાઈ ગઈ
      </span>
    </span>
  </figcaption>
</figure>
`;

exports[`Canonical Watch SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/gujarati/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Watch SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gujarati/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Watch SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gujarati/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Watch SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gujarati/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Watch SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gujarati/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Watch SEO Canonical link 1`] = `"http://localhost:7081/gujarati/watch/cj4jdypqw9zo"`;

exports[`Canonical Watch SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Watch SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Watch SEO Heading level 1 1`] = `"નેપાળ : એવું ભયંકર પૂર આવ્યું કે વાહનો, પુલ, બિલ્ડિંગો તણાઈ ગયાં"`;

exports[`Canonical Watch SEO Lang attribute 1`] = `"gu"`;

exports[`Canonical Watch SEO Linked data should match text 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@type": "NewsArticle",
      "about": [
        {
          "@type": "Place",
          "name": "નેપાળ",
        },
        {
          "@type": "Person",
          "name": "શી જિનપિંગ",
          "sameAs": [
            "http://dbpedia.org/resource/Xi_Jinping",
          ],
        },
        {
          "@type": "Place",
          "name": "ભારત",
          "sameAs": [
            "http://dbpedia.org/resource/India",
          ],
        },
        {
          "@type": "Place",
          "name": "ચીન",
          "sameAs": [
            "http://dbpedia.org/resource/China",
          ],
        },
        {
          "@type": "Person",
          "name": "નરેન્દ્ર મોદી",
          "sameAs": [
            "http://dbpedia.org/resource/Narendra_Modi",
          ],
        },
        {
          "@type": "Thing",
          "name": "પૂર",
          "sameAs": [
            "http://dbpedia.org/resource/Flood",
          ],
        },
        {
          "@type": "Thing",
          "name": "વાતાવરણ",
          "sameAs": [
            "http://dbpedia.org/resource/Severe_weather",
          ],
        },
      ],
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gujarati/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News ગુજરાતી",
        "noBylinesPolicy": "https://www.bbc.com/gujarati/institutional-50409883#authorexpertise",
      },
      "dateModified": "2026-08-26T13:22:55.569Z",
      "datePublished": "2026-08-26T13:22:55.569Z",
      "headline": "નેપાળ : એવું ભયંકર પૂર આવ્યું કે વાહનો, પુલ, બિલ્ડિંગો તણાઈ ગયાં",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_gujarati/e07a/live/169da890-a151-11f1-aed2-8d6da8d75094.jpg",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "gu",
        "name": "Gujarati",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/gujarati/watch/cj4jdypqw9zo",
        "@type": "WebPage",
        "name": "નેપાળ : એવું ભયંકર પૂર આવ્યું કે વાહનો, પુલ, બિલ્ડિંગો તણાઈ ગયાં",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gujarati/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News ગુજરાતી",
        "publishingPrinciples": "https://www.bbc.com/gujarati/institutional-50409883",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_gujarati/e07a/live/169da890-a151-11f1-aed2-8d6da8d75094.jpg",
      "url": "http://localhost:7081/gujarati/watch/cj4jdypqw9zo",
    },
  ],
}
`;

exports[`Canonical Watch SEO Linked data should match text 2`] = `
{
  "@context": "http://schema.org",
  "@type": "VideoObject",
  "description": "એવું ભયંકર પૂર આવ્યું કે વાહનો, પુલ, બિલ્ડિંગો તણાઈ ગઈ",
  "duration": "PT1M14S",
  "embedURL": "https://www.test.bbc.com/ws/av-embeds/articles/cj4jdypqw9zo/p0p6c5gp/gu",
  "name": "એવું ભયંકર પૂર આવ્યું કે વાહનો, પુલ, બિલ્ડિંગો તણાઈ ગઈ",
  "thumbnailUrl": "https://ichef.bbci.co.uk/images/ic/1024x576/p0p6c6m9.jpg",
  "uploadDate": "2026-08-26T12:54:05.000Z",
}
`;

exports[`Canonical Watch SEO OG description 1`] = `"ચીન-નેપાળ સરહદ નજીક ભયંકર પૂરને કારણે વાહનો, પુલ અને ઇમારતોને ભારે નુકસાન થયું છે. સીસીટીવી ફૂટેજમાં કાદવ અને પાણીનું ધસમસતું વહેણ રસ્તા અને ઇમારતોને પોતાની ચપેટમાં લેતું જોવા મળે છે. "`;

exports[`Canonical Watch SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1200/branded_gujarati/e07a/live/169da890-a151-11f1-aed2-8d6da8d75094.jpg"`;

exports[`Canonical Watch SEO OG image alt 1`] = `"ચીન-નેપાળ સરહદ નજીક ભયંકર પૂરને કારણે વાહનો, પુલ અને ઇમારતોને ભારે નુકસાન થયું છે. સીસીટીવી ફૂટેજમાં કાદવ અને પાણીનું ધસમસતું વહેણ રસ્તા અને ઇમારતોને પોતાની ચપેટમાં લેતું જોવા મળે છે. "`;

exports[`Canonical Watch SEO OG locale 1`] = `"gu-IN"`;

exports[`Canonical Watch SEO OG site name 1`] = `"BBC News ગુજરાતી"`;

exports[`Canonical Watch SEO OG title 1`] = `"નેપાળ : એવું ભયંકર પૂર આવ્યું કે વાહનો, પુલ, બિલ્ડિંગો તણાઈ ગયાં - BBC News ગુજરાતી"`;

exports[`Canonical Watch SEO OG type 1`] = `"article"`;

exports[`Canonical Watch SEO OG url 1`] = `"http://localhost:7081/gujarati/watch/cj4jdypqw9zo"`;

exports[`Canonical Watch SEO Page title 1`] = `"નેપાળ : એવું ભયંકર પૂર આવ્યું કે વાહનો, પુલ, બિલ્ડિંગો તણાઈ ગયાં - BBC News ગુજરાતી"`;

exports[`Canonical Watch SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Watch SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Watch SEO Twitter creator 1`] = `"@bbcnewsgujarati"`;

exports[`Canonical Watch SEO Twitter description 1`] = `"ચીન-નેપાળ સરહદ નજીક ભયંકર પૂરને કારણે વાહનો, પુલ અને ઇમારતોને ભારે નુકસાન થયું છે. સીસીટીવી ફૂટેજમાં કાદવ અને પાણીનું ધસમસતું વહેણ રસ્તા અને ઇમારતોને પોતાની ચપેટમાં લેતું જોવા મળે છે. "`;

exports[`Canonical Watch SEO Twitter image alt 1`] = `"ચીન-નેપાળ સરહદ નજીક ભયંકર પૂરને કારણે વાહનો, પુલ અને ઇમારતોને ભારે નુકસાન થયું છે. સીસીટીવી ફૂટેજમાં કાદવ અને પાણીનું ધસમસતું વહેણ રસ્તા અને ઇમારતોને પોતાની ચપેટમાં લેતું જોવા મળે છે. "`;

exports[`Canonical Watch SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1200/branded_gujarati/e07a/live/169da890-a151-11f1-aed2-8d6da8d75094.jpg"`;

exports[`Canonical Watch SEO Twitter site 1`] = `"@bbcnewsgujarati"`;

exports[`Canonical Watch SEO Twitter title 1`] = `"નેપાળ : એવું ભયંકર પૂર આવ્યું કે વાહનો, પુલ, બિલ્ડિંગો તણાઈ ગયાં - BBC News ગુજરાતી"`;

exports[`Canonical Watch Timestamp should match text and date 1`] = `
{
  "date": "2026-08-26",
  "text": "26 ઓગસ્ટ 2026",
}
`;
